--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "Mongodb://localhost:27017",
+    "DatabaseName": "ProductDb",
+    "CollectionName": "Products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
