Added Discount Controller and added containerize Orchestration support for Discount API

--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -20,7 +20,7 @@ services:
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin1234
-      - POSTGRES_DB=discountdb
+      - POSTGRES_DB=Discountdb
     restart: always
     ports:
       - "5432:5432"
@@ -67,4 +67,14 @@ services:
       - basketdb
     ports:
       - "8001:80"
+
+  discount.api:
+    container_name: discount.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    depends_on:
+      - discountdb
+    ports:
+      - "8082:80"
 
