--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,6 +1,9 @@
 {
   "CacheSettings": {
-    "ConnectionString": "basketdb:6379"
+    "ConnectionString": "localhost:6379"
+  },
+  "GrpcSettings": {
+    "DiscountGrpcServiceUrl": "http://localhost:5003"
   },
   "Logging": {
     "LogLevel": {
