--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -3,6 +3,7 @@
 # CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
 dotnet_diagnostic.CS8604.severity = none
 dotnet_diagnostic.CS8618.severity = none
+dotnet_diagnostic.CS8625.severity = none
 dotnet_diagnostic.CS8629.severity = none
 dotnet_diagnostic.CS8765.severity = none
 csharp_indent_labels = one_less_than_current
