Clean Architecture : Developed Ordering.Infrastructure, InfrastructureService registration, adding Application and Infra layer dependency into ordering.API

--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -2,6 +2,7 @@
 
 # CS8618: Non-nullable field must contain a non-null value when exiting constructor. Consider declaring as nullable.
 dotnet_diagnostic.CS8604.severity = none
+dotnet_diagnostic.CS8603.severity = none
 dotnet_diagnostic.CS8618.severity = none
 dotnet_diagnostic.CS8625.severity = none
 dotnet_diagnostic.CS8629.severity = none
