--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa; Password=SWN12345678;"
+  },
+  "EmailSettings": {
+    "FromAddress": "rajiv.saxena1784@gmail.com",
+    "ApiKey": "",
+    "FromName": "RajivSaxena"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
